c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@atomics.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/atomics.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#![feature(core_intrinsics)]
pub type size_t = usize;
pub type uint64_t = u64;
pub type atomic_int = ::core::ffi::c_int;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn c11_atomics(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    *&raw mut x = 0 as ::core::ffi::c_int;
    ::core::intrinsics::atomic_store::<_, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        &raw mut x,
        1 as ::core::ffi::c_int,
    );
    ::core::intrinsics::atomic_load::<_, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        &raw mut x,
    );
    ::core::intrinsics::atomic_xadd::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        &raw mut x,
        2 as ::core::ffi::c_int,
    );
    ::core::intrinsics::atomic_xsub::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        &raw mut x,
        1 as ::core::ffi::c_int,
    );
    ::core::intrinsics::atomic_and::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        &raw mut x,
        0xf as ::core::ffi::c_int,
    );
    ::core::intrinsics::atomic_or::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        &raw mut x,
        0x10 as ::core::ffi::c_int,
    );
    ::core::intrinsics::atomic_nand::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        &raw mut x,
        0xff as ::core::ffi::c_int,
    );
    ::core::intrinsics::atomic_xchg::<_, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        &raw mut x,
        42 as ::core::ffi::c_int,
    );
    let mut expected: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut desired: ::core::ffi::c_int = 100 as ::core::ffi::c_int;
    let c2rust_result = ::core::intrinsics::atomic_cxchg::<
        _,
        { ::core::intrinsics::AtomicOrdering::SeqCst },
        { ::core::intrinsics::AtomicOrdering::SeqCst },
    >(&raw mut x, *&raw mut expected, desired);
    *&raw mut expected = c2rust_result.0;
    c2rust_result.1;
    expected = 100 as ::core::ffi::c_int;
    desired = 200 as ::core::ffi::c_int;
    let c2rust_result_0 = ::core::intrinsics::atomic_cxchgweak::<
        _,
        { ::core::intrinsics::AtomicOrdering::SeqCst },
        { ::core::intrinsics::AtomicOrdering::SeqCst },
    >(&raw mut x, *&raw mut expected, desired);
    *&raw mut expected = c2rust_result_0.0;
    c2rust_result_0.1;
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn fetch_after_atomics_signed(
    mut x: ::core::ffi::c_int,
) -> ::core::ffi::c_int {
    let c2rust_lhs = &raw mut x;
    let c2rust_rhs = 2 as ::core::ffi::c_int;
    ::core::intrinsics::atomic_xadd::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs, c2rust_rhs,
    ) + c2rust_rhs;
    let c2rust_lhs_0 = &raw mut x;
    let c2rust_rhs_0 = 1 as ::core::ffi::c_int;
    ::core::intrinsics::atomic_xsub::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs_0,
        c2rust_rhs_0,
    ) - c2rust_rhs_0;
    let c2rust_lhs_1 = &raw mut x;
    let c2rust_rhs_1 = 0xf as ::core::ffi::c_int;
    ::core::intrinsics::atomic_and::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs_1,
        c2rust_rhs_1,
    ) & c2rust_rhs_1;
    let c2rust_lhs_2 = &raw mut x;
    let c2rust_rhs_2 = 0x10 as ::core::ffi::c_int;
    ::core::intrinsics::atomic_or::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs_2,
        c2rust_rhs_2,
    ) | c2rust_rhs_2;
    let c2rust_lhs_3 = &raw mut x;
    let c2rust_rhs_3 = 0xff as ::core::ffi::c_int;
    !(::core::intrinsics::atomic_nand::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs_3,
        c2rust_rhs_3,
    ) & c2rust_rhs_3);
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn fetch_after_atomics_unsigned(
    mut x: ::core::ffi::c_uint,
) -> ::core::ffi::c_uint {
    let c2rust_lhs = &raw mut x;
    let c2rust_rhs = 2 as ::core::ffi::c_uint;
    ::core::intrinsics::atomic_xadd::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs, c2rust_rhs,
    )
    .wrapping_add(c2rust_rhs);
    let c2rust_lhs_0 = &raw mut x;
    let c2rust_rhs_0 = 1 as ::core::ffi::c_uint;
    ::core::intrinsics::atomic_xsub::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs_0,
        c2rust_rhs_0,
    )
    .wrapping_sub(c2rust_rhs_0);
    let c2rust_lhs_1 = &raw mut x;
    let c2rust_rhs_1 = 0xf as ::core::ffi::c_uint;
    ::core::intrinsics::atomic_and::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs_1,
        c2rust_rhs_1,
    ) & c2rust_rhs_1;
    let c2rust_lhs_2 = &raw mut x;
    let c2rust_rhs_2 = 0x10 as ::core::ffi::c_uint;
    ::core::intrinsics::atomic_or::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs_2,
        c2rust_rhs_2,
    ) | c2rust_rhs_2;
    let c2rust_lhs_3 = &raw mut x;
    let c2rust_rhs_3 = 0xff as ::core::ffi::c_uint;
    !(::core::intrinsics::atomic_nand::<_, _, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        c2rust_lhs_3,
        c2rust_rhs_3,
    ) & c2rust_rhs_3);
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn initialized_atomic() -> ::core::ffi::c_int {
    let mut value: atomic_int = 5 as ::core::ffi::c_int;
    return ::core::intrinsics::atomic_load::<_, { ::core::intrinsics::AtomicOrdering::SeqCst }>(
        &raw mut value,
    );
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn atomic_size_t_remainder(
    mut value: uint64_t,
    mut atomic_numchars: size_t,
) -> uint64_t {
    return value.wrapping_rem(::core::intrinsics::atomic_load::<
        _,
        { ::core::intrinsics::AtomicOrdering::SeqCst },
    >(&raw mut atomic_numchars) as uint64_t);
}
pub const __ATOMIC_SEQ_CST: ::core::ffi::c_int = 5 as ::core::ffi::c_int;
