c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@const_macro_bitfield.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/const_macro_bitfield.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
use ::c2rust_bitfields::BitfieldStruct;
#[derive(Copy, Clone, ::c2rust_bitfields::BitfieldStruct)]
#[repr(C)]
pub struct indexwriter {
    #[bitfield(name = "should_write", ty = "::core::ffi::c_uint", bits = "0..=0")]
    pub should_write: [u8; 1],
    #[bitfield(padding)]
    pub c2rust_padding: [u8; 3],
    pub fd: ::core::ffi::c_int,
}
#[no_mangle]
pub unsafe extern "C" fn make_writer() -> indexwriter {
    let mut writer: indexwriter = {
        let mut init = indexwriter {
            should_write: [0; 1],
            c2rust_padding: [0; 3],
            fd: 0 as ::core::ffi::c_int,
        };
        init.set_should_write(0 as ::core::ffi::c_uint);
        init
    };
    return writer;
}
